--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			</head>
 	<body>
 			<header>
@@ -24,8 +25,8 @@
 			</div>
 			<nav> 
 				<ul id="nav"> 
-					<li><a href="index.html">Home</a> </li>
-					<li><a href="about.html">About</a> </li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About </a></li>
 					<li><a href="contatti.html">Contatti</a></li>
 			</nav>
 		</header>
@@ -80,8 +81,7 @@
 				<img src="images/mascherine.jpg" alt="agricoltura">
 				</div>
 				<div class="caption">
-				<p>L’Associazione WATINOMA (accoglienza) è un’organizzazione di volontariato ONLUS.
-blblblblblblblblblblbllb</p>
+				<p>L’Associazione WATINOMA (accoglienza) è un’organizzazione di volontariato ONLUS.</p>
 </div>
 </a>
 </div>
